Switch from Daytona to SSH deployment
- Remove Daytona sandbox deployment, use direct SSH to biaz.hurated.com
- Update .env.example with SERVER_HOST and rounded ports (3000, 4000, 5000, 6000)
- Remove SERVER_USER (uses current user for SSH)
- Replace Daytona-specific scripts with server management scripts:
  - deploy.sh: SSH deployment (commit, push, scp .env, git pull, docker compose)
  - server-logs.sh: View logs from remote server
  - server-status.sh: Check server status
  - sandbox-cleanup.sh: Delete ALL Daytona sandboxes (for Browser Use only)
- Remove sandbox-logs.sh and sandbox-status.sh (no longer needed)
- Add compose.yml.example with all ports from env vars
- Add migration documentation
- Daytona still used for Browser Use automation only

--- a/.env.example
+++ b/.env.example
@@ -25,14 +25,15 @@ GALILEO_AI_API_KEY=your_galileo_ai_api_key_here
 # Media API Keys
 PEXELS_API_KEY=your_pexels_api_key_here
 
-# Docker Configuration
-EXTERNAL_API_PORT=3000
-EXTERNAL_WORKER_PORT=3001
+# SSH Deployment Configuration
+SERVER_HOST=biaz.hurated.com
+SERVER_PATH=AutoViral
 
-# Deployment Configuration
-DAYTONA_WORKSPACE_PREFIX=autoviral
-DAYTONA_CONTROL_PLANE_NAME=autoviral-control-prod
-DAYTONA_DEV_WORKSPACE=autoviral-control-dev
+# Docker Ports (all ports used in compose.yml - rounded to 000)
+API_PORT=3000
+WORKER_PORT=4000
+DB_PORT=5000
+REDIS_PORT=6000
 
 # Platform Credentials (for posting)
 X_USERNAME=your_x_username
