Create actual compose.yml with env-based ports, add Instagram credentials
- Rename compose.yml.example to compose.yml (real config, not example)
- Add Instagram credentials to api and worker services
- Update port defaults to avoid conflicts: 3000, 7000, 21000, 22000
- Remove X and Reddit from .env.example (Instagram only)
- All ports from .env with fallback defaults

--- a/.env.example
+++ b/.env.example
@@ -29,17 +29,13 @@ PEXELS_API_KEY=your_pexels_api_key_here
 SERVER_HOST=biaz.hurated.com
 SERVER_PATH=AutoViral
 
-# Docker Ports (all ports used in compose.yml - rounded to 000)
+# Docker Ports (all ports used in compose.yml - rounded to 000, avoiding conflicts)
 API_PORT=3000
-WORKER_PORT=4000
-DB_PORT=5000
-REDIS_PORT=6000
+WORKER_PORT=7000
+DB_PORT=21000
+REDIS_PORT=22000
 
-# Platform Credentials (for posting)
-X_USERNAME=your_x_username
-X_PASSWORD=your_x_password
-REDDIT_USERNAME=your_reddit_username
-REDDIT_PASSWORD=your_reddit_password
+# Platform Credentials (for posting) - Instagram only
 INSTAGRAM_USERNAME=your_instagram_username
 INSTAGRAM_PASSWORD=your_instagram_password
 
