--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,5 @@
 # AutoViral Docker Compose Configuration
-# Copy this to compose.yml and customize as needed
-# All ports come from .env file
+# All ports and credentials come from .env file
 
 version: '3.8'
 
@@ -11,7 +10,7 @@ services:
       dockerfile: Dockerfile
     container_name: autoviral-api
     ports:
-      - "${API_PORT}:3000"
+      - "${API_PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - DB_URL=${DB_URL}
@@ -24,6 +23,8 @@ services:
       - PEXELS_API_KEY=${PEXELS_API_KEY}
       - DAYTONA_API_KEY=${DAYTONA_API_KEY}
       - DAYTONA_API_URL=${DAYTONA_API_URL}
+      - INSTAGRAM_USERNAME=${INSTAGRAM_USERNAME}
+      - INSTAGRAM_PASSWORD=${INSTAGRAM_PASSWORD}
     volumes:
       - ./data:/app/data
       - ./media:/app/media
@@ -40,7 +41,7 @@ services:
       dockerfile: Dockerfile
     container_name: autoviral-worker
     ports:
-      - "${WORKER_PORT}:4000"
+      - "${WORKER_PORT:-7000}:3001"
     environment:
       - NODE_ENV=production
       - DB_URL=${DB_URL}
@@ -52,6 +53,8 @@ services:
       - PEXELS_API_KEY=${PEXELS_API_KEY}
       - DAYTONA_API_KEY=${DAYTONA_API_KEY}
       - DAYTONA_API_URL=${DAYTONA_API_URL}
+      - INSTAGRAM_USERNAME=${INSTAGRAM_USERNAME}
+      - INSTAGRAM_PASSWORD=${INSTAGRAM_PASSWORD}
     volumes:
       - ./data:/app/data
       - ./media:/app/media
@@ -66,7 +69,7 @@ services:
     image: postgres:16-alpine
     container_name: autoviral-db
     ports:
-      - "${DB_PORT}:5432"
+      - "${DB_PORT:-21000}:5432"
     environment:
       - POSTGRES_DB=autoviral
       - POSTGRES_USER=autoviral
@@ -81,7 +84,7 @@ services:
     image: redis:7-alpine
     container_name: autoviral-redis
     ports:
-      - "${REDIS_PORT}:6379"
+      - "${REDIS_PORT:-22000}:6379"
     volumes:
       - redis-data:/data
     restart: unless-stopped
