Create Instagram trend discovery API and worker (Phase 1)
API Features:
- Express.js REST API with Bearer auth
- SQLite database with Prisma ORM
- Trend discovery endpoints (GET /trends, POST /webhook/trend)
- Kill switch endpoints (POST /stop/trend/:id, /stop/keyword)
- Health check and status monitoring
- Time-based filtering (since=1h, 30m, etc.)
- Deduplication within 1-hour windows

Worker Features:
- Instagram trend discovery using Browser Use + Daytona
- Focus on SPEED over volume (velocity tracking)
- Periodic discovery every 5 minutes (configurable)
- Engagement metrics and hashtag analysis
- Reports trends to API via webhook

Database Schema:
- Trends: keyword, source, status, score, metadata
- Settings: key-value configuration store

Docker Setup:
- api/ service: Express API on port 3000
- worker/ service: Discovery worker on port 7000
- Removed PostgreSQL/Redis (using SQLite for simplicity)
- Shared data/ and media/ volumes

Documentation:
- API.md: Complete API reference with examples
- api/README.md: API quick start guide
- worker/README.md: Worker implementation guide

Environment:
- DATABASE_URL for SQLite path
- DISCOVERY_INTERVAL_MINUTES for worker frequency
- API_URL for worker-to-API communication

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ MAX_DISCOVERIES_PER_HOUR=60
 # Daytona Sandbox Configuration
 MAX_SANDBOX_LIFETIME_MINUTES=30
 SANDBOX_CLEANUP_INTERVAL_MINUTES=5
+
+# Database
+DATABASE_URL=file:../data/autoviral.db
+
+# Worker Configuration
+DISCOVERY_INTERVAL_MINUTES=5
+API_URL=http://api:3000
