--- a/worker/package.json
+++ b/worker/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "browser-use-sdk": "^0.1.0"
+    "axios": "^1.6.2"
   }
 }
