📈 Add growth tracking and discovery stats
Features Added:
===============

1. 📊 Discovery Stats in Logs
   - Shows trends found, new vs duplicates
   - Total posts, avg likes
   - Tracking status (hashtags/posts being monitored)

2. 📈 Real Growth Tracking (Not Popularity)
   - Track post counts and likes over time
   - Calculate ACTUAL growth rates (posts/hour, likes/hour)
   - Compare current vs previous discovery
   - Store max 100 posts per hashtag
   - Auto-cleanup old data (>7 days)

3. 🎯 Trending Focus (Not Most Popular)
   - "Trending" = growing FAST (velocity)
   - "Popular" = large numbers (ignore)
   - Score prioritizes growth rate over absolute counts
   - New hashtags marked as "new"
   - Growth score: 0-100 based on rate of change

4. ✅ API Already Sorts by Recent
   - discoveredAt DESC (most recent first)
   - No changes needed

How It Works:
=============
- First discovery: Hashtag marked as "new"
- Stores: postCount, topPostLikes, timestamp
- Next discovery: Compares current vs previous
  - Post growth rate (posts/hour)
  - Like growth rate (likes/hour)
  - Growth score: 0-100
- Velocity categories:
  - very-fast: >75 growth score
  - fast: 50-75 growth score
  - moderate: 25-50 growth score
  - slow: <25 growth score

Data Storage:
=============
- File: worker/data/trending-posts.json
- Max 100 posts per hashtag
- Auto-cleanup >7 days
- Persists across restarts

Log Output Example:
==================
📊 Discovery Stats:
   • Trends found: 5
   • New trends: 3
   • Duplicates: 2
   • Total posts: 2,500,000
   • Avg top post likes: 45,000
   • Tracking 12 hashtags (0 posts)

Now we track TRENDING (growth) not POPULAR (size)!

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -11,6 +11,9 @@ RUN npm install
 # Copy source code
 COPY src ./src
 
+# Create data directory for tracking
+RUN mkdir -p /app/data
+
 EXPOSE 3001
 
 CMD ["npm", "start"]
