--- a/compose.yml
+++ b/compose.yml
@@ -57,6 +57,7 @@ services:
       - ./data:/app/data
       - ./media:/app/media
     restart: unless-stopped
+    stop_grace_period: 60s  # Allow 60s for graceful shutdown (Browser Use task completion)
     networks:
       - autoviral-network
 
