--- a/compose.yml
+++ b/compose.yml
@@ -57,7 +57,7 @@ services:
       - ./data:/app/data
       - ./media:/app/media
     restart: unless-stopped
-    stop_grace_period: 60s  # Allow 60s for graceful shutdown (Browser Use task completion)
+    stop_grace_period: 15m  # Allow 15 minutes for graceful shutdown (Browser Use tasks can take long)
     networks:
       - autoviral-network
 
