⏰ Change discovery interval to once per day (24 hours)
Changed DISCOVERY_INTERVAL_MINUTES from 1 to 1440 (24 hours).

Why daily instead of every minute:
===================================
✅ Reduces API costs (Browser Use credits)
✅ Instagram trends don't change every minute
✅ More realistic production schedule
✅ Still frequent enough to catch new trends
✅ Allows proper growth tracking over 24h periods

Benefits:
=========
- Cost-effective: ~30 discoveries/month vs ~43K/month
- Better data: Daily comparisons more meaningful
- Less noise: Filters out random fluctuations
- Production-ready: Sustainable for long-term use

Schedule:
=========
Worker will discover trends:
- Immediately on startup
- Every 24 hours thereafter
- Same time each day

--- a/compose.yml
+++ b/compose.yml
@@ -42,7 +42,7 @@ services:
       - NODE_ENV=production
       - API_URL=${API_URL}
       - AUTH_BEARER_KEY=${AUTH_BEARER_KEY}
-      - DISCOVERY_INTERVAL_MINUTES=1
+      - DISCOVERY_INTERVAL_MINUTES=1440  # Run once per day (24 hours)
       - LLM_PROVIDER=${LLM_PROVIDER}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
